--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
       <timezone>-5</timezone>
     </developer>
   </developers>
+<build>
 <plugins>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
@@ -42,4 +43,5 @@
   </executions>
 </plugin>
 </plugins>
+</build>
 </project>
