--- a/pom.xml
+++ b/pom.xml
@@ -23,11 +23,33 @@
       <timezone>-5</timezone>
     </developer>
   </developers>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId></groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.6.2</version>
+            <scope>test</scope>
+        </dependency>
+
+    </dependencies>
 <build>
 <plugins>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-resources-plugin</artifactId>
+  <version>3.0.2</version>
+  <executions>
+</plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.7.0</version>
   <executions>
     <execution>
       <id>compile mytests</id>
