--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId></groupId>
+            <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.6.2</version>
             <scope>test</scope>
