--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-resources-plugin</artifactId>
-  <version>3.0.2</version>
+  <version>2.7</version>
+</plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-resources-plugin</artifactId>
+  <version>2.7</version>
 </plugin>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
