--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,18 @@
 <plugins>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-resources-plugin</artifactId>
-  <version>2.7</version>
+  <artifactId>maven-clean-plugin</artifactId>
+  <version>3.0.0</version>
 </plugin>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-resources-plugin</artifactId>
-  <version>2.7</version>
+  <version>2.5</version>
+</plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-resources-plugin</artifactId>
+  <version>2.5</version>
 </plugin>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
