--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,24 @@
 <build>
 <plugins>
 <plugin>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>cobertura-maven-plugin</artifactId>
+    <version>2.5.2</version>
+    <configuration>
+        <formats>
+            <format>xml</format>
+        </formats>
+    </configuration>
+    <executions>
+        <execution>
+            <phase>package</phase>
+            <goals>
+                <goal>cobertura</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>    
+<plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-clean-plugin</artifactId>
   <version>2.7</version>
@@ -47,17 +65,17 @@
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-resources-plugin</artifactId>
-  <version>2.7</version>
+  <!--version>2.7</version-->
 </plugin>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-resources-plugin</artifactId>
-  <version>2.7</version>
+  <!--version>2.7</version-->
 </plugin>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-compiler-plugin</artifactId>
-  <version>2.7</version>
+  <!--version>2.7</version-->
   <executions>
     <execution>
       <id>compile mytests</id>
