--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
   <artifactId>maven-clean-plugin</artifactId>
-  <version>2.7</version>
+  <!--version>2.7</version-->
 </plugin>
 <plugin>
   <groupId>org.apache.maven.plugins</groupId>
